--- a/BA3D/BA3D.vcxproj.filters
+++ b/BA3D/BA3D.vcxproj.filters
@@ -53,4 +53,8 @@
       <Filter>资源文件</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
 </Project>
