--- a/BA3D/BA3D.vcxproj
+++ b/BA3D/BA3D.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -140,6 +140,7 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Polygon.cpp" />
+    <ClCompile Include="Yin.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DoublyConnectedEdgeList.h">
@@ -150,6 +151,7 @@
     <ClInclude Include="Point.h" />
     <ClInclude Include="Polygon.h" />
     <ClInclude Include="UnionFind.h" />
+    <ClInclude Include="Yin.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="data.txt" />
