--- a/BA3D/BA3D.vcxproj.filters
+++ b/BA3D/BA3D.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Mesh.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Yin.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Point.h">
@@ -47,6 +50,9 @@
     <ClInclude Include="UnionFind.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Yin.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="data.txt">
@@ -54,7 +60,6 @@
     </Text>
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram.cd" />
-    <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
   </ItemGroup>
 </Project>
